fixed scrollbar issue
git-svn-id: https://docutils.svn.sourceforge.net/svnroot/docutils/trunk@5336 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/sandbox/py-rest-doc/sphinx/style/default.css
+++ b/sandbox/py-rest-doc/sphinx/style/default.css
@@ -178,9 +178,8 @@ ul.keywordmatches li.goodmatch a {
 
 div.actions {
     border-top: 1px solid #aaa;
-    /*border-bottom: 1px solid #ccc;*/
     background-color: #ddd;
-    margin: 10px -20px 0 -20px;
+    margin: 10px 0 0 -20px;
     padding: 5px 0 5px 20px;
 }
 
